Kubernates-master/k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service   # your frontend ClusterIP service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: springboot-service # your Spring Boot service
            port:
              number: 8080
